Example/AwesomeMvcDemo/AwesomeMvcDemo/Views/Error/Expectedp.ascx
<%@ Control Language="C#" Inherits="System.Web.Mvc.ViewUserControl<object>" %>

<%:ViewData["message"] %>